# dawos-cli

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  dawos-cli.spec  index.html  installer.ps1  installer.sh  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: build-binary.yml  ci.yml  docs.yml  release.yml
changelog/: index.html
commands/: index.html
commands/firewall/: index.html
commands/network/: index.html
commands/reference/: index.html
commands/session/: index.html
commands/system/: index.html
commands/traffic/: index.html
dawos_cli/: __init__.py  __main__.py  app.py  client.py  config.py  dashboard.py  doctor.py  multi.py  output.py  shell.py  state.py  telemetry.py  updater.py  wizards.py
dawos_cli/commands/: __init__.py  audit.py  bulk.py  config_cmd.py  conntrack.py  dhcp.py  diagnostics.py  dns.py  events.py  export.py  firewall.py  flow.py  history.py  limits.py  lldp.py  logs.py  monitoring.py  nat.py  network.py  node.py  ntp.py  playbook.py  pool.py  pppoe.py  profile.py  radius_cmd.py  routing.py  scheduler.py  service.py  sessions.py  system.py  traffic.py  vrrp.py  wizard.py  zone.py
development/architecture/: index.html
development/contributing/: index.html
development/security/: index.html
docs/: changelog.md  index.md
docs/commands/: firewall.md  index.md  network.md  reference.md  session.md  system.md  traffic.md
docs/development/: architecture.md  contributing.md  security.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: multi-node.md  scripting.md  troubleshooting.md
docs/stylesheets/: extra.css
docs/testing/: test-report.md
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/multi-node/: index.html
guides/scripting/: index.html
guides/troubleshooting/: index.html
homebrew/: dawos-cli.rb
search/: search_index.json
testing/test-report/: index.html
tests/: conftest.py  test_app.py  test_client.py  test_commands.py  test_config.py  test_coverage_gaps.py  test_dashboard.py  test_doctor.py  test_edge_cases.py  test_multi.py  test_node.py  test_output.py  test_security_hardening.py  test_shell.py  test_state.py  test_telemetry.py  test_wizard.py
